--- a/curry.html
+++ b/curry.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curry</title>
 </head>
 <body>
     <h1>Curry</h1>
-    <img src="curry.webp">
+    <img src="curry">
     <p>Enjoy the lavishly delicious taste of chicken curry at home with this easy-to-follow recipe. Bold spices like ginger, cumin, and curry powder add rich layers of flavor to succulent chicken coated in a creamy tomato-based sauce. Fill your kitchen with the delightful fragrance of a creamy, spicy, and filling curry that the whole family will love.</p>
     <ul>
         <li>2 pounds of skinless, boneless chicken breast halves</li>
