--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <a href="curry.html">Curry</a>
+        <a href="tortilla.html">Chicken tortilla soup</a>
+        <a href="curry.html">Curry</a>
+
     </body>
 </html>
